--- a/integrations/cdn/full-featured-card.html
+++ b/integrations/cdn/full-featured-card.html
@@ -36,30 +36,38 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
     <p id="error"></p>
     <p id="success">Payment Successful!</p>
     <script>
-      // STEP #2: Initialize the Airwallex global context for event communication
-      Airwallex.init({
-        env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
-        origin: window.location.origin, // Setup your event target to receive the browser events message
-        fonts: [
-          // Customizes the font for the payment elements
-          {
-            src:
-              'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
-            family: 'AxLLCircular',
-            weight: 400,
+      try {
+        // STEP #2: Initialize the Airwallex global context for event communication
+        Airwallex.init({
+          env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
+          origin: window.location.origin, // Setup your event target to receive the browser events message
+          fonts: [
+            // Customizes the font for the payment elements
+            {
+              src:
+                'https://checkout.airwallex.com/fonts/CircularXXWeb/CircularXXWeb-Regular.woff2',
+              family: 'AxLLCircular',
+              weight: 400,
+            },
+          ],
+        });
+
+        // STEP #4: Create 'fullFeaturedCard' element
+        const element = Airwallex.createElement('fullFeaturedCard', {
+          intent: {
+            // Required, fullFeaturedCard uses intent Id and client_secret to prepare checkout
+            id: 'replace-with-your-intent-id',
+            client_secret: 'replace-with-your-client-secret',
           },
-        ],
-      });
-      // STEP #4: Create 'fullFeaturedCard' element
-      const element = Airwallex.createElement('fullFeaturedCard', {
-        intent: {
-          // Required, fullFeaturedCard uses intent Id and client_secret to prepare checkout
-          id: 'replace-with-your-intent-id',
-          client_secret: 'replace-with-your-client-secret',
-        },
-      });
-      // STEP #5: Mount 'fullFeaturedCard' element
-      element.mount('full-featured-card'); // This 'full-featured-card' id MUST MATCH the id on your empty container created in Step 3
+        });
+        // STEP #5: Mount 'fullFeaturedCard' element
+        element.mount('full-featured-card'); // This 'full-featured-card' id MUST MATCH the id on your empty container created in Step 3
+      } catch (error) {
+        document.getElementById('loading').style.display = 'none'; // Example: hide loading state
+        document.getElementById('error').style.display = 'block'; // Example: show error
+        document.getElementById('error').innerHTML = error.message; // Example: set error message
+        console.error('There was an error', error);
+      }
 
       // STEP #6: Add an event listener to handle events when the element is mounted
       window.addEventListener('onReady', (event) => {
