feat: [APAF-1316] added redirect element

--- a/integrations/cdn/index.html
+++ b/integrations/cdn/index.html
@@ -26,6 +26,7 @@
       <a href="/full-featured-card.html">Full Feature Card</a>
       <a href="/split-card.html">Split Card</a>
       <a href="/wechat.html">Wechat</a>
+      <a href="/redirect.html">Redirect</a>
     </div>
     <h3>Here are some tips to help you navigate this project:</h3>
     <div className="instruction-container">
