--- a/integrations/cdn/card.html
+++ b/integrations/cdn/card.html
@@ -71,7 +71,7 @@
         document.getElementById('submit').disabled = true; // Example: disable button to prevent double submission
 
         Airwallex.confirmPaymentIntent({
-          element: card,
+          element: Airwallex.getElement('card'),
           id: 'replace-with-your-intent-id',
           client_secret: 'replace-with-your-client-secret',
         })
