feat: clear input message when focus on the input

--- a/integrations/cdn/card.html
+++ b/integrations/cdn/card.html
@@ -30,7 +30,7 @@
     <div id="card-container" style="display: none">
       <!-- STEP #3a: Add an empty container for the card element to be injected into -->
       <div id="card"></div>
-      <p id="input-error"></p>
+      <p id="input-error" style="color: red"></p>
       <!-- STEP #3b: Add a submit button to trigger the payment request -->
       <button id="submit" disabled="true">Submit</button>
     </div>
@@ -114,6 +114,10 @@
       // STEP #9: Add an event listener to get input focus status
       window.addEventListener('onFocus', (event) => {
         // Customize your input focus style by listen onFocus event
+        const element = document.getElementById('input-error');
+        if (element) {
+          element.innerHTML = ''; // Example: clear input error message
+        }
       });
 
       // STEP #10: Add an event listener to show input error message when finish typing
