fix: add error boundary

--- a/integrations/cdn/card.html
+++ b/integrations/cdn/card.html
@@ -125,7 +125,7 @@
         const { complete } = event.detail;
         const { error } = event.detail;
         const element = document.getElementById('input-error');
-        if (element) {
+        if (element & error) {
           element.innerHTML = error.message || JSON.stringify(error); // Example: set input error message
         }
       });
