--- a/integrations/cdn/split-card.html
+++ b/integrations/cdn/split-card.html
@@ -170,7 +170,7 @@
       window.addEventListener('onBlur', (event) => {
         const { error, type } = event.detail;
         const element = document.getElementById(type + '-error');
-        if (element) {
+        if (element && error) {
           element.innerHTML = error.message || JSON.stringify(error); // Example: set input error message
         }
       });
