feat: update the bundlejs src in airwallex-payment-demo

--- a/integrations/cdn/wechat.html
+++ b/integrations/cdn/wechat.html
@@ -21,7 +21,7 @@ Detailed guidance here: https://github.com/airwallex/airwallex-payment-demo/blob
               - You MUST replace the bundle version to the latest NPM version
                 in order to import the package properly!
     -->
-    <script src="https://checkout.airwallex.com/assets/bundle.x.x.x.min.js"></script>
+    <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
   </head>
   <body>
     <h1>Wechat integration</h1>
