--- a/integrations/cdn/hpp.html
+++ b/integrations/cdn/hpp.html
@@ -21,7 +21,7 @@
                - You MUST replace the bundle version to the latest NPM version
                  in order to import the package properly!
     -->
-    <script src="https://checkout.airwallex.com/assets/bundle.x.x.x.min.js"></script>
+    <script src="https://checkout.airwallex.com/assets/elements.bundle.min.js"></script>
   </head>
   <body>
     <h1>Hosted payment page (HPP) integration</h1>
