--- a/integrations/cdn/split-card.html
+++ b/integrations/cdn/split-card.html
@@ -117,9 +117,9 @@
         expiry: false,
         cvc: false,
       };
-
+      const domElement = document.getElementById('cardNumber');
       // STEP #7: Add an event listener to ensure the element is mounted
-      window.addEventListener('onReady', (event) => {
+      domElement.addEventListener('onReady', (event) => {
         /*
         ... Handle event
           */
@@ -142,7 +142,7 @@
       };
 
       // STEP #8: Add an event listener to listen to the changes in each of the input fields
-      window.addEventListener('onChange', (event) => {
+      domElement.addEventListener('onChange', (event) => {
         /*
         ... Handle event
           */
@@ -158,7 +158,7 @@
         document.getElementById('submit').disabled = !allElementsCompleted;
       });
       // STEP #9: Add an event listener to get input focus status
-      window.addEventListener('onFocus', (event) => {
+      domElement.addEventListener('onFocus', (event) => {
         // Customize your input focus style by listen onFocus event
         const element = document.getElementById(type + '-error');
         if (element) {
@@ -167,7 +167,7 @@
       });
 
       // STEP #10: Add an event listener to show input error message when finish typing
-      window.addEventListener('onBlur', (event) => {
+      domElement.addEventListener('onBlur', (event) => {
         const { error, type } = event.detail;
         const element = document.getElementById(type + '-error');
         if (element && error) {
@@ -175,7 +175,7 @@
         }
       });
       // STEP #9: Add an event listener to handle events when there is an error
-      window.addEventListener('onError', (event) => {
+      domElement.addEventListener('onError', (event) => {
         /*
           ... Handle event on error
         */
