--- a/integrations/cdn/index.html
+++ b/integrations/cdn/index.html
@@ -27,6 +27,7 @@
       <a href="/split-card.html">Split Card</a>
       <a href="/wechat.html">Wechat</a>
       <a href="/redirect.html">Redirect</a>
+      <a href="/3dsApi.html">3dsApi</a>
     </div>
     <h3>Here are some tips to help you navigate this project:</h3>
     <div className="instruction-container">
