--- a/integrations/cdn/googlepay.html
+++ b/integrations/cdn/googlepay.html
@@ -2,7 +2,7 @@
   googlepay.html
   Airwallex Payment Demo - Static HTML.  Created by Shirly Chen and Josie Ku.
 
-  airwallex-payment-elements Apple Pay element integration in Static HTML
+  airwallex-payment-elements Google Pay element integration in Static HTML
   Comments with "Example" demonstrate how states can be integrated
   with the element, they can be removed.
 
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <h1>Apple Pay integration</h1>
+  <h1>Google Pay integration</h1>
   <!-- Styling example below: Setting container to display nothing when element is not mounted -->
   <div id="googlepay-container" style="display: none">
     <!-- STEP #3a: Add an empty container for the googlepay element to be injected into -->
