feat: [APA-4980] add klarna osm

--- a/integrations/simplify/klarna-osm.html
+++ b/integrations/simplify/klarna-osm.html
@@ -22,7 +22,7 @@
         id="credit-promotion-auto-size"
         data-key="credit-promotion-auto-size"
         data-locale="en-US"
-        data-purchase-amount=""
+        data-purchase-amount="300"
         >
       </klarna-placement>
       <!-- end Placement -->
