feat: [APA-4980] add klarna osm

--- a/integrations/simplify/klarna-osm.html
+++ b/integrations/simplify/klarna-osm.html
@@ -17,12 +17,12 @@
   <body>
     <div calss="container">
       <p>credit-promotion-auto-size</p>
-      <!-- Placement v2 -->
+      <!-- Placement v2: need to replace the 300 with the purchase amount -->
       <klarna-placement
         id="credit-promotion-auto-size"
         data-key="credit-promotion-auto-size"
         data-locale="en-US"
-        data-purchase-amount="300"
+        data-purchase-amount="300" 
         >
       </klarna-placement>
       <!-- end Placement -->
