feat: [APA-5152] consolid sdk

--- a/integrations/cdn (components-sdk)/applepay.html
+++ b/integrations/cdn (components-sdk)/applepay.html
@@ -39,9 +39,10 @@
   <p id="error"></p>
   <p id="success">Payment successful!</p>
   <script>
-    try {
+    (async () => {
+      try {
       // STEP #2: Initialize the Airwallex global context for event communication
-      Airwallex.init({
+      await window.AirwallexComponentsSDK.init({
         env: 'prod', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
       });
@@ -94,8 +95,7 @@
       document.getElementById('error').innerHTML = error.message; // Example: set error message
       console.error('There was an error', error);
     }
-
-
+    })();
   </script>
 </body>
 
