--- a/integrations/cdn (components-sdk)/dropin.html
+++ b/integrations/cdn (components-sdk)/dropin.html
@@ -38,9 +38,10 @@
   <p id="error"></p>
   <p id="success">Payment Successful!</p>
   <script>
-    try {
+    (async () => {
+      try {
       // STEP #2: Initialize the Airwallex global context for event communication
-      Airwallex.init({
+      await window.AirwallexComponentsSDK.init({
         env: 'demo', // Setup which Airwallex env('staging' | 'demo' | 'prod') to integrate with
         origin: window.location.origin, // Setup your event target to receive the browser events message
       });
@@ -90,7 +91,7 @@
       document.getElementById('error').innerHTML = error.message; // Example: set error message
       console.error('There was an error', error);
     }
-
+    })();
   </script>
 </body>
 <style>
