feat: [AJS-147] change from confirmIntent from confirm

--- a/integrations/cdn(components-sdk)/card.html
+++ b/integrations/cdn(components-sdk)/card.html
@@ -107,7 +107,7 @@
       document.getElementById('submit').innerHTML = 'Processing...'; // Example: set submitting state
       document.getElementById('submit').disabled = true; // Example: disable button to prevent double submission
 
-      Airwallex.confirmPaymentIntent({
+      card.confirm({
         element: Airwallex.getElement('card'),
         id: 'replace-with-your-intent-id',
         client_secret: 'replace-with-your-client-secret',
